Resetting to the first version of contrast fixes after team review. Added a couple of TODOs for places to look at adjusting the margins and padding.

--- a/client/src/result/collections/collectionTile.css
+++ b/client/src/result/collections/collectionTile.css
@@ -3,8 +3,7 @@ $cardHeight: 10em;
 $cardWidth: 20em;
 
 .tileContainer {
-  /*padding: 1em;*/ /* Original, Version 1 and 2 */
-  padding: .5ex; /* Version 3 */
+  padding: 1em;
   text-align: center;
   max-width: $cardWidth;
   height: $cardHeight;
@@ -14,21 +13,16 @@ $cardWidth: 20em;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    /*border: 1px solid $color-gray;*/ /* Contrast: orginal */
 
-    /* Contrast: version 1 */
-    /*border-left: 3px inset rgba(10,10,10,.9);
+    /border-left: 3px inset rgba(10,10,10,.9);
     border-top: 3px inset rgba(10,10,10,.9);
     border-bottom: 2px inset rgba(10,10,10,.9);
-    border-right: 2px inset rgba(10,10,10,.9);*/
-
-    border: .5ex solid $color-gray; /* Contrast: version 2 */
+    border-right: 2px inset rgba(10,10,10,.9);
 
     color: white;
     overflow: hidden;
 
-    /* box-shadow: 6px 8px 5px rgba(0, 0, 0, .7);*/ /* Contrast: orginal */
-    box-shadow: 6px 8px 5px rgba(0, 0, 0, .7); /* Contrast: version 1 */
+    box-shadow: 6px 8px 5px rgba(0, 0, 0, .7);
 
     &:hover {
       box-shadow: 0 0 6px 2px color($color-primary lightness(-10%));
@@ -38,12 +32,11 @@ $cardWidth: 20em;
       height: 100%;
       background: linear-gradient(rgba(10, 10, 10, 1), rgba(10, 10, 10, .5), rgba(10, 10, 10, .2), rgba(10, 10, 10, 0));
     }
-    /* Contrast: version 1 */
-    /*.overlay2 {
+    .overlay2 {
       width: 100%;
       height: 100%;
       background: linear-gradient(to right, rgba(10, 10, 10, .8), rgba(10, 10, 10, .3), rgba(10, 10, 10, .1), rgba(10, 10, 10, 0), rgba(10, 10, 10, 0), rgba(10, 10, 10, 0), rgba(10, 10, 10, 0));
-    }*/
+    }
     .mapContainer {
       position: relative;
       z-index: -1;
